# GraphDB-Neo4j

./: .gitignore  README.md  pyproject.toml
fastapi/models/: student.py
fastapi/resources/: students.json
fastapi/routes/: student_routes.py
fastapi/services/: create_relationships.py  student_service.py
src/: graphdb.py  llm_cypher.py  main.py
