[project]
name = "graph-db-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=6.0.3",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.21",
    "google-generativeai>=0.8.6",
    "genai>=2.1.0",
    "google-genai>=1.56.0",
    "rapidfuzz>=3.14.3",
]
